[project]
name = "chronicle"
version = "0.1.0"
description = ""
authors = [
    {name = "bbearce",email = "bbearce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydicom (>=3.0.1,<4.0.0)",
    "couchdb (>=1.2,<2.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "python-gdcm (>=3.0.24.1,<4.0.0.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "bpython (>=0.25,<0.26)",
    "pandas (>=2.2.3,<3.0.0)",
    "pylibjpeg[all] (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
