[project]
name = "chronicle"
version = "0.1.0"
description = ""
authors = [
    {name = "bbearce",email = "bbearce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pylibjpeg[all] (>=2.0.1,<3.0.0)",
    "pandas (==2.1.0)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "python-gdcm (>=3.0.24.1,<4.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "couchdb (>=1.2,<2.0)",
    "numpy (==1.24.0)",
    "pydicom (>=3.0.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
